# price-ec2

./: .editorconfig  .gitignore  .travis.yml  Makefile  README.md  price-ec2.py  price_ec2.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-to-freeze.txt  requirements.in  requirements.txt  setup.py
